[project]
name = "dahuffman"
version = "0.4.2-alpha"
authors = [
    { name = "Stefaan Lippens", email = "soxofaan@gmail.com" },
]
description = "Pure Python Huffman encoder and decoder module"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Compression",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
license = { text = "MIT License" }
keywords = ["huffman", "compression", "encoding", "decoding"]


[project.urls]
"Homepage" = "https://github.com/soxofaan/dahuffman"
"Bug Tracker" = "https://github.com/soxofaan/dahuffman/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = [
    "/dahuffman/**/*.py",
    "/dahuffman/codecs/*.pickle",
    "/tests/**/*.py",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "/tests",
]


[tool.isort]
profile = "black"
