[metadata]
name = dahuffman
author = Stefaan Lippens
author_email = soxofaan@gmail.com
license = MIT
description = Pure Python Huffman encoder and decoder module
keywords = huffman, compression, encoding, decoding
url = https://github.com/soxofaan/dahuffman
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    Topic :: System :: Archiving :: Compression
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = dahuffman, dahuffman.codecs
include_package_data = True


[bdist_wheel]
universal=1

[flake8]
extend-exclude = train

